# ops-orchestrator

./: .gitignore  ARCHITECTURE.md  README.md  TOOLS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
